// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change loading state 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -149,6 +149,7 @@
          testID=\\"mfaCodeInput\\"
          value=\\"Roge\\"
        />
      </View>
    </Flex>
+   <LoadingWheel />
  </View>"
`;

exports[`should change loading state 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -149,7 +149,6 @@
          testID=\\"mfaCodeInput\\"
          value=\\"Roge\\"
        />
      </View>
    </Flex>
-   <LoadingWheel />
  </View>"
`;

exports[`should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <Flex
        align="start"
        justify="center"
        style={
          Object {
            "paddingLeft": 5,
          }
        }
        value={1}
      >
        <DeprecatedBackButton />
      </Flex>
      <Flex
        align="end"
        justify="center"
        style={
          Object {
            "paddingRight": 5,
          }
        }
        value={1}
      >
        <Button
          buttonTextStyle={
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 14,
              "fontStyle": "normal",
              "fontWeight": "bold",
              "letterSpacing": 1.5,
              "lineHeight": 18,
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            }
          }
          onPress={[MockFunction]}
          testID="doneButton"
          text="DONE"
          type="transparent"
        />
      </Flex>
    </View>
  </RCTSafeAreaView>
  <Flex
    justify="center"
    style={
      Object {
        "flex": 1,
        "paddingHorizontal": 40,
      }
    }
    value={1}
  >
    <Text
      style={
        Object {
          "color": "#3CC8E6",
          "fontFamily": "AmaticSC-Bold",
          "fontSize": 36,
          "fontStyle": "normal",
          "fontWeight": "bold",
          "letterSpacing": 2,
          "lineHeight": 36,
          "paddingVertical": 10,
          "textAlign": "center",
          "textAlignVertical": "center",
          "textTransform": "lowercase",
        }
      }
    >
      two-step verification
    </Text>
    <Text
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 24,
          "paddingVertical": 10,
          "textAlign": "center",
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Enter verification code from your authenticator app.
    </Text>
    <View>
      <Text
        style={
          Object {
            "color": "#3CC8E6",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Verification Code
      </Text>
      <Input
        autoFocus={true}
        blurOnSubmit={true}
        keyboardType="numeric"
        onChangeText={[MockFunction]}
        onSubmitEditing={[MockFunction]}
        placeholder="Verification Code"
        placeholderTextColor="#ffffff"
        returnKeyType="done"
        testID="mfaCodeInput"
        value="Roge"
      />
    </View>
  </Flex>
</View>
`;
